--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,102 +1,76 @@
 .user
   .user__info
-    %h1 情報入力
+    %h1 ⭐️TECH::CAMP生の為のSNS⭐️会員登録
   .user__form
     .user__input__center
-      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = form_for(resource, as: resource_name, url: new_user_registration_path(resource_name)) do |f|
         = render "devise/shared/error_messages", resource: resource
-        .user__input__identification
-          ユーザー情報登録(アプリ内では表示されません)
-          .text-gray
-            %p 安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
         .user__input__top
-          本名
+          本名(他の人には表示されません)
           %span.red
             必須
           = f.text_field :name, autofocus: true, autocomplete: "nickname", class: "text-field", placeholder: "例) 岡本琉雅"
         .user__input
-          メールアドレス
+          メールアドレス(他の人には表示されません)
           %span.red
             必須
-          = f.email_field :email, autofocus: true, autocomplete: "email", class: "text-field", placeholder: "例) ruka20020212@icloud.com"
+          = f.email_field :email, autofocus: true, autocomplete: "email", class: "text-field", placeholder: "例) "
         .user__input
           = f.label :password, "パスワード"
-          - if @minimum_password_length
-            %em
-              (#{@minimum_password_length}文字以上)
+          %em
+            7文字以上
           %span.red
             必須
-          = f.password_field :password, autocomplete: "new-password",  class: "text-field", placeholder: "半角英数字でお願い"
+          = f.password_field :password, autocomplete: "new-password",  class: "text-field", placeholder: "例) 半角英数字でお願いします"
         %label
           %input.user__input__password{:type => "checkbox"}>
             パスワードを表示する
-        -# 以下Profilesテーブルに保存するものです。テーブルを作成してから書き換えます。
-        -# 全て :nickname で代用してるので、Profilesのカラム名に合わせてください。
-        -# <%= f.fields_for :address do |i| %>
-        .user__input__identification
-          プロフィール情報登録(アプリ内で使います)
-          .text-gray
-            %p 後からでも編集できますが,null :falseがかかっているので一応全て記入してください。
-        .user__input
-          ニックネーム
-          %span.red
-            必須
-          .user__input__name
-            -# :first_name
-            = f.text_field :name, placeholder: "例) るるかさん", class: "user__input__family text-field-n"
-          TwitterのID(DM機能実装するまではこっちで連絡取り合って...)
-          %span.red
-            必須
-          .user__input__name
-            -# :first_name
-            = f.text_field :name, placeholder: "例)＠rurukasan0212", class: "user__input__family text-field-n"
-          受講期
-          %span.red
-            必須
-          .user__input__name
-            -# :first_name
-            = f.text_field :name, placeholder: "例) 73期", class: "user__input__family text-field-n"
-          コース
-          %span.red
-            必須
-          .user__input__name
-            -# :first_name
-            = f.text_field :name, placeholder: "例) 短期コース", class: "user__input__family text-field-n"
-          座席
-          %span.red
-            必須
-          .user__input__name
-            -# :first_name
-            = f.text_field :name, placeholder: "例) 23(毎回書き直してくれたら嬉しい)", class: "user__input__family text-field-n"
-          前職
-          %span.red
-            必須
-          .user__input__name
-            -# :first_name
-            = f.text_field :name, placeholder: "例) 無職(話の話題に...)", class: "user__input__family text-field-n"
-          みんなへひとこと
-          %span.red
-            必須
-          .user__input__name
-            -# :first_name
-            = f.text_area :name, placeholder: "例) 面白い事考えるのめんどいからここはパス。。。何行でもかけるよ！", class: "user__input__family text-field-n"
-          -# .user__input__birth
-          -#   生年月日
-          -#   %span.red
-          -#     必須
-          -#   %br/
-          -#   -# 年 :birth_year
-          -#   = f.select :name, ['---','2020'], class: 'select-field'
-          -#   -# 月 :birth_month
-          -#   = f.select :name, ['---','12'], class: "select-field"
-          -#   -# 月 :birth_day
-          -#   = f.select :name, ['---','31'], class: "select-field"
-          .text-gray
-            %p ※ アイコンの設定がまだできてないです。すぐ実装するので相手を想像しながらお待ちください。
-        .user__input
-          多くの受講生の方が登録する事が前提で,このアプリは作られています。まだ登録をしていない方を見つけたら,すぐにこのアプリを教えて上げてください。
-        .user__input__actions
-          = f.submit "新規登録", class: 'red-btn'
-
-          
-      -# = render "devise/shared/links"
+        = f.fields_for :profile, @user.build_profile do |i|
+          .user__input__identification
+            プロフィール設定(他の人に表示されるよ)
+            .text-gray
+              %p 後からでも編集できますが,必須の表記がある欄はnull :falseがかかっているので一応全て記入してください。
+          .user__input
+            ニックネーム
+            %span.red
+              必須
+            .user__input__name
+              = i.text_field :nickname, placeholder: "例) るるかさん", class: "user__input__family text-field-n"
+          .user__input
+            現在座ってる座席
+            .user__input__name
+              = i.text_field :seat_number, placeholder: "例) 23(毎回書き直してくれたら嬉しい)", class: "user__input__family text-field-n"
+          .user__input
+            TwitterのID(DM機能作れてない..ごめそ)
+            .user__input__name
+              = i.text_field :twitter, placeholder: "例) @rurukasan0212", class: "user__input__family text-field-n"
+          .user__input
+            前職(会話のネタに)
+            .user__input__name
+              = i.text_field :former_job, placeholder: "例) ニート", class: "user__input__family text-field-n"
+          .user__input
+            みんなに一言
+            .user__input__name
+              = i.text_area :shout_message, placeholder: "例) (￣▽￣)", class: "user__input__family text-field-n"
+          .user__input
+            期
+            .user__input__name
+              = i.text_field :term, placeholder: "例) 73期", class: "user__input__family text-field-n"
+          .user__input
+            コース
+            .user__input__name
+              = i.text_field :style, placeholder: "例) 短期コース", class: "user__input__family text-field-n"
+          -# .user__input
+          -#   .user__input__birth
+          -#     期・コース
+          -#     %span.red
+          -#       必須
+          -#     %br/
+          -#     = i.select :term, ['---','73','74'], class: 'select-field'
+          -#     = i.select :style, ['---','短期コース'], class: "select-field"
+            .text-gray
+              %p ※ 本人情報は正しく入力して下さい。会員登録後、修正するにはお時間を頂く場合があります。
+          .user__input
+            「新規登録する」を押すことにより、忘れがちな人脈形成が容易になります。
+          .user__input__actions
+            = f.submit "新規登録", class: 'red-btn'
