--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -3,7 +3,7 @@
     %h1 ⭐️TECH::CAMP生の為のSNS⭐️会員登録
   .user__form
     .user__input__center
-      = form_for(resource, as: resource_name, url: new_user_registration_path(resource_name)) do |f|
+      = form_for(resource, as: resource_name, url: user_registration_path) do |f|
         = render "devise/shared/error_messages", resource: resource
         .user__input__top
           本名(他の人には表示されません)
