--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,7 @@
 @import "reset";
-// @import "modules/profiles";
+@import "modules/variables";
+@import "modules/profile";
 @import "modules/user";
+@import "modules/header";
+@import "font-awesome-sprockets";
+@import "font-awesome";
