--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -30,7 +30,7 @@
             = profile.shout_message
           %ul
             %li
-              = link_to "詳細ページ",profile_path(current_user.id)
+              = link_to "詳細ページ",profile_path(profile.id)
             %li
               = link_to "メモを見る",root_path
   .download
